// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sell yourself modal renders without errors 1`] = `
<div
  className="container"
  id="sell-yourself"
>
  <Modal
    handleClose={[MockFunction]}
    show={false}
    showBtn={true}
    size="small"
    title={null}
  >
    <p
      className="form-header"
    >
      Apply for 
      Data Engineering
       certification
    </p>
    <p
      className="form-title"
    >
      Sell yourself in one sentence [500 characters max]
    </p>
    <textarea
      className="form-control"
      onChange={[Function]}
      required={true}
      value=""
    />
    <div
      className="d-flex w-100 word-count justify-content-between mt-3"
    >
      <p
        className="feedback-text"
      >
        C'mon, don't sell yourself short!. 😏
      </p>
      <div
        className="rounded-circle count-wrapper d-flex justify-content-center align-items-center ml-3 border-danger ml-3"
      >
        <p
          className="count"
        >
          0
        </p>
      </div>
    </div>
    <button
      className="btn btn-primary text-uppercase apply-btn"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Apply for this certification
    </button>
  </Modal>
</div>
`;

exports[`sell yourself modal should render the error notification toast when the application submission fails 1`] = `
<div
  className="container"
  id="sell-yourself"
>
  <Modal
    handleClose={[MockFunction]}
    show={false}
    showBtn={true}
    size="small"
    title={null}
  >
    <p
      className="form-header"
    >
      Apply for 
      Data Engineering
       certification
    </p>
    <p
      className="form-title"
    >
      Sell yourself in one sentence [500 characters max]
    </p>
    <textarea
      className="form-control"
      onChange={[Function]}
      required={true}
      value=""
    />
    <span
      className="error-message text-danger"
    >
      Spaces, really?
    </span>
    <div
      className="d-flex w-100 word-count justify-content-between mt-3"
    >
      <p
        className="feedback-text"
      >
        C'mon, don't sell yourself short!. 😏
      </p>
      <div
        className="rounded-circle count-wrapper d-flex justify-content-center align-items-center ml-3 border-danger ml-3"
      >
        <p
          className="count"
        >
          0
        </p>
      </div>
    </div>
    <button
      className="btn btn-primary text-uppercase apply-btn"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Apply for this certification
    </button>
  </Modal>
</div>
`;

exports[`sell yourself modal should render the success notification toast when the application submission succeeds 1`] = `
<div
  className="container"
  id="sell-yourself"
>
  <Modal
    handleClose={[MockFunction]}
    show={false}
    showBtn={true}
    size="small"
    title={null}
  >
    <p
      className="form-header"
    >
      Apply for 
      Data Engineering
       certification
    </p>
    <p
      className="form-title"
    >
      Sell yourself in one sentence [500 characters max]
    </p>
    <textarea
      className="form-control"
      onChange={[Function]}
      required={true}
      value=""
    />
    <span
      className="error-message text-danger"
    >
      Spaces, really?
    </span>
    <div
      className="d-flex w-100 word-count justify-content-between mt-3"
    >
      <p
        className="feedback-text"
      >
        C'mon, don't sell yourself short!. 😏
      </p>
      <div
        className="rounded-circle count-wrapper d-flex justify-content-center align-items-center ml-3 border-danger ml-3"
      >
        <p
          className="count"
        >
          0
        </p>
      </div>
    </div>
    <button
      className="btn btn-primary text-uppercase apply-btn"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Apply for this certification
    </button>
  </Modal>
</div>
`;
